--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                         <el-col :span="6">
                             <el-button @click="addTransaction">Submit</el-button>
                         </el-col>
-                        <div v-loading="loading" style="width: 100%; height: 250px;">{{ result }}</div>
+                        <div v-loading="loading" style="width: 100%; height: 250px; margin-top: 8px;">{{ result }}</div>
                     </el-row>
                 </el-col>
 
